--- a/scss/style.scss
+++ b/scss/style.scss
@@ -62,15 +62,12 @@ h3 {
   
 }
 }
-
-
+.myFaceMobile {
+  display: none;
+}
 
 #wrapper .myFace {
   width: 100%;
-}
-
-#wrapper .myFaceMobile {
-  display: none;
 }
 
 .feature {
@@ -437,16 +434,8 @@ background:transparent;
     color: $pinkColor;
     padding-top:35px;
   }
-  & .slider-wrapper {
-    & .bb-bookblock {
-      width:960px;
-      height:560px;
-    }
-    & a {
-      display:none;
-    }
-  }
 }
+
 
 
 /*---------About me section---------*/
@@ -507,8 +496,6 @@ background:transparent;
     }
   }
 }
-
-
 /*-----Skills section------*/
 
 #mySkills {
@@ -728,7 +715,7 @@ background:transparent;
   }
   .skill-wrapper {
     width: 100%;
-    height: 780px;
+    height: 820px;
   }
   .skill-wrapper #container {
     width: 490px;
@@ -978,9 +965,25 @@ background:transparent;
     & .form-wrapper {
     width:47%;
       & .button {
+        width:80px;
+        height:60px;
         text-align:center;
-    
-  } 
+        margin:0 auto;
+        font-size:20px;
+        font-weight:900;
+        letter-spacing: 1px;
+        padding:2px 10px;
+        background-color:transparent;
+        color:white;
+        border:2px solid white;
+        list-style: none outside none;
+        transition: 0.3s ease;
+        text-transform: uppercase;
+  }
+      & .button:hover {
+        border:2px solid $pinkColor;
+        color:$pinkColor;
+      }
   }
   } 
 }
